@@ -2,17 +2,17 @@
 
 set -e
 
-rm -rf module-a/target module-b/target module-c/target
+rm -rf module-a/target module-b/target module-c/target myjre
 
 # Compile module a
 javac -d module-a/target/classes \
-      module-a/src/org/modules/a/Thing.java \
-      module-a/src/org.modules.a/module-info.java
+      module-a/src/org.modules.a/module-info.java \
+      module-a/src/org/modules/a/Thing.java
 
 # Compile module c
 javac -d module-c/target/classes \
-      module-c/src/org/modules/c/Ting.java \
-      module-c/src/org.modules.c/module-info.java
+      module-c/src/org.modules.c/module-info.java \
+      module-c/src/org/modules/c/Ting.java
 
 # Compile module b
 javac -d module-b/target/classes \
@@ -20,6 +20,10 @@ javac -d module-b/target/classes \
       module-b/src/org/modules/b/Main.java \
       module-b/src/org.modules.b/module-info.java 
 
+jlink -p ${JAVA_HOME}/jmods:module-a/target/classes:module-b/target/classes:module-c/target/classes \
+      --add-modules java.base \
+      --output myjre
+
 # Run module b
-java -p module-a/target/classes:module-b/target/classes:module-c/target/classes \
+myjre/bin/java -p module-a/target/classes:module-b/target/classes:module-c/target/classes \
      -m org.modules.b/org.modules.b.Main
